[MNT-23509] Added unit test